--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -201,7 +201,7 @@
                     android:id="@+id/btnSaveCustomer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#222E6D7D"
+                    android:background="#090c63"
                     android:paddingLeft="16dp"
                     android:paddingTop="16dp"
                     android:paddingRight="16dp"
@@ -214,7 +214,7 @@
                     android:id="@+id/btnCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#222E6D7D"
+                    android:background="#090c63"
                     android:paddingLeft="16dp"
                     android:paddingTop="16dp"
                     android:paddingRight="16dp"
