--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/travelandroid" />
+        app:srcCompat="@drawable/cabin" />
 <!--app:srcCompat="@drawable/mountain_beach_city"-->
     <TextView
         android:id="@+id/textView66"
@@ -26,7 +26,8 @@
         android:layout_marginTop="16dp"
         android:text="Travel Experts Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#015E50"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,6 +39,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Email:"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerAccount" />
 
@@ -47,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@android:color/white"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Password:"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="@+id/etPassword"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
@@ -68,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@android:color/white"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="#22a15f"
+        android:background="#090c63"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Log In"
@@ -95,6 +100,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:accessibilityLiveRegion="polite"
+        android:background="@android:color/white"
         android:backgroundTint="#E6E2E1E1"
         android:backgroundTintMode="multiply"
         android:dropDownWidth="match_parent"
@@ -114,6 +120,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Account Type:"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView66" />
 
