--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:text="Bookings"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#015E50"
+        android:textColor="#090c63"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,9 +69,9 @@
         android:layout_marginTop="16dp"
         android:clickable="true"
         android:text="Start Date"
-        android:textColorLink="#195e3a"
-        android:textColor="#22a15f"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/holo_blue_light"
+        android:textColorLink="@android:color/holo_blue_dark"
         app:layout_constraintStart_toStartOf="@+id/TextView26"
         app:layout_constraintTop_toBottomOf="@+id/TextView26" />
 
@@ -90,9 +90,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="End Date"
-        android:textColorLink="#195e3a"
-        android:textColor="#22a15f"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/holo_blue_light"
+        android:textColorLink="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toBottomOf="@+id/textView27"
         app:layout_constraintStart_toEndOf="@+id/textView27" />
 
@@ -100,12 +100,12 @@
         android:id="@+id/btnShowDates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#090c63"
         android:onClick="showDates"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:background="#22a15f"
+        android:text="#090c63"
         android:textColor="#FFFFFF"
-        android:text="Show Dates"
         app:layout_constraintBottom_toTopOf="@+id/listBookings"
         app:layout_constraintEnd_toEndOf="parent" />
 
