--- a/app/src/main/res/layout/activity_customer_edit.xml
+++ b/app/src/main/res/layout/activity_customer_edit.xml
@@ -182,6 +182,7 @@
                 <Button
                     android:id="@+id/btnSaveCustomer"
                     android:layout_width="match_parent"
+                    android:background="#090c63"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
                     android:paddingBottom="16dp"
@@ -189,6 +190,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                 <Button
                     android:id="@+id/btnDeleteCustomer"
+                    android:background="#090c63"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
@@ -197,6 +199,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                 <Button
                     android:id="@+id/btnCancel"
+                    android:background="#090c63"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@android:string/cancel"
