--- a/app/src/main/res/layout/activity_customer_new.xml
+++ b/app/src/main/res/layout/activity_customer_new.xml
@@ -182,6 +182,7 @@
 
                 <Button
                     android:id="@+id/btnSaveNewCustomer"
+                    android:background="#090c63"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
@@ -191,6 +192,7 @@
 
                 <Button
                     android:id="@+id/btnCancel"
+                    android:background="#090c63"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@android:string/cancel"
