--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#32B438</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorPrimary">#03089c</color>
+    <color name="colorPrimaryDark">#03089c</color>
+    <color name="colorAccent">#03089c</color>
 
 
 
